# mplayer-client

./: .gitignore  About.norg  Cargo.toml  README.md  config.toml  flake.nix  log.txt
src/: fuzzy_search.rs  main.rs  parser.rs  states.rs  ui.rs  utils.rs
