[package]
name = "mplayer-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
crossterm = "0.27.0"
event-listener = "5.2.0"
futures-util = "0.3.30"
ratatui = "0.26.2"
zbus = "4.1.2"
