# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["yasssine <yassine.bna@proton.me>"]
name = "mplayer-client"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/yassinebenarbia/mplayer-client"
description = "Terminal based client for the mplayer-server music player server"


[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
audiotags = "0.5.0"
basic-toml = "0.1.9"
crossterm = "0.27.0"
lofty = "0.21.0"
rand = "0.8.5"
ratatui = "0.28.0"
serde = "1.0.204"
zbus = "4.1.2"
